# year-game

./: .gitignore  1234.txt  12345.txt  2023 original.txt  2023.txt  Cargo.toml  Untitled-2.hs  answer copy.txt  answer.txt  answer_not_as_old.txt  answer_old.txt  blablabla.rs  year_game_12.txt  year_game_2023.txt  year_game_6969.txt
answers/: 123.txt  2017.txt  2024.r  answer copy.txt  year_game_00000.txt  year_game_1675374004811_2024.txt  year_game_1675378043729_1023.txt  year_game_1675457154642_234.txt  year_game_1678246422574_2012.txt  year_game_new2023.txt
src/: brainstorm.txt  main.rs  test.py
