[package]
name = "year-game-rust-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
counter = "0.5.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
queues = "1.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
